# vigilant-kit

./: .vigilant.env.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml  vgl.yaml.example  vgl_config.yaml.example  vigilant.json.example
docs/: actions.md  browser_options.md  changelog_logic.md  configuration.md  index.md  native_selenium.md  selenium_install.md  tutorial_pytest.md  vigilant_pytest.md  vigilant_unittest.md
src/actions/: assertions.py  finder.py  vigilant_actions.py  waiter.py
src/driver/: __init__.py  vigilant_driver.py
src/vgl-cli/: local_dev.py  utils.py  vgl.py
src/vgl_cli/: install_dev_kit_command.py  install_standalone.py  install_standalone_command.py  install_webdriver_command.py  local_dev.py  run_selenium_command.py  selenium_commands.py  vgl.py
src/vigilant/: logger.py
src/vigilant/actions/: assertions.py  data_saver.py  finder.py  scrapper.py  vigilant_actions.py  vigilant_pdf.py  waiter.py
src/vigilant/driver/: __init__.py  vigilant_driver.py
vigilant/actions/: assertions.py  vigilant_actions.py  waiter.py
vigilant/driver/: vigilant_driver.py
